Replaced createBook logic with ternary operator